feat: plain Jetty server instead of Spring Boot